Added maven project structure